Adding validation methods to phone number and e-mail